tests/integration/features/options/options_per_project/validations/01_malformed_toml/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output/ | filecheck %s --dump-input=fail
CHECK: error: Could not parse the config file {{.*}}strictdoc.toml: Key group not on a line by itself. (line 1 column 1 char 0).
